spec/e2e/if/var_in_else.lit
# error: [line 5] Error at "let": I was expecting an expression here.
if true {
  "ok";
} else {
  let foo;
}
